--- a/style.css
+++ b/style.css
@@ -1,29 +1,23 @@
 body {
-	margin: 0;
-	padding: 0;
-	background-color: black;
-
+    margin: 0;
+    padding: 0;
 }
-
-#menu {
-	position: fixed;
-	top: 50px;
-	width: auto;
-	height: auto;
+#slider {
+    position: fixed;
+    top: 50px;
+    width: auto;
+    height: auto;
 }
-
-#belMe {
-	position: absolute;
-	left: -100px;
-	width: 100px;
-	height: 100px;
-	background-color: white;
+#sliderCard {
+    position: absolute;
+    left: -100px;
+    width: 100px;
+    height: 100px;
+    background-color: #db81ff;
 }
-
-#belMeInUit {
-	position: absolute;
-	width: 40px;
-	height: 100px;
-	background-color: yellow;
+#sliderLabel {
+    position: absolute;
+    width: 40px;
+    height: 100px;
+    background-color: #0aff8c;
 }
-
